Updated swagger models
